# abpoa-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  release-plz.toml
.github/workflows/: release-plz.yml
abpoa-rs/: CHANGELOG.md  Cargo.toml
abpoa-rs/src/: lib.rs
abpoa-sys/: CHANGELOG.md  Cargo.toml  build.rs
abpoa-sys/src/: lib.rs
src/: lib.rs
tests/data/: test_from_abpoa.consensus.fa
