[package]
name = "abpoa-rs"
version = "0.1.0"
edition = "2021"

include = [
    "abPOA/include",
    "abPOA/src",
    "abPOA/Makefile",
]
links = "abpoa"

[dependencies]
libc = "0.2.158"
libz-sys = { version = "1.1", default-features = false, features = ["libc"] }

[build-dependencies]
bindgen = "0.70.1"
cc = "1.1.15"
glob = "0.3.1"
